Update README; Add our own Pair class